--- a/build.gradle
+++ b/build.gradle
@@ -1,30 +1,23 @@
+plugins {
+    id 'org.springframework.boot' version '2.6.2'
+    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
+    id 'java'
+}
+
 apply plugin: 'java'
 apply plugin: 'war'
 apply plugin: 'idea'
 apply plugin: 'eclipse'
-apply plugin: 'com.bmuschko.tomcat'
 
-buildscript {
-    repositories {
-        maven {
-            url "https://plugins.gradle.org/m2/"
-        }
-    }
-    dependencies {
-        classpath "com.bmuschko:gradle-tomcat-plugin:2.7.0"
-    }
-}
 
-ext {
-    springVersion = "4.2.1.RELEASE"
-    springSecurityVersion = "4.0.1.RELEASE"
-    springDataJpaVersion = "1.8.0.RELEASE"
-    hibernateVersion = "4.3.10.Final"
-    mysqlConnectorVersion = "8.0.27"
-    junitVersion = "4.12"
-    slf4jVersion = "1.7.12"
-    logbackVersion = "1.1.3"
-    tomcatVersion = '7.0.59'
+group = 'com.example'
+version = '0.0.1-SNAPSHOT'
+sourceCompatibility = '1.8'
+
+configurations {
+    compileOnly {
+        extendsFrom annotationProcessor
+    }
 }
 
 repositories {
@@ -32,66 +25,23 @@ repositories {
 }
 
 dependencies {
-    tomcat "org.apache.tomcat.embed:tomcat-embed-core:${tomcatVersion}",
-            "org.apache.tomcat.embed:tomcat-embed-logging-juli:${tomcatVersion}",
-            "org.apache.tomcat.embed:tomcat-embed-jasper:${tomcatVersion}"
-
-    providedCompile "javax.servlet:javax.servlet-api:3.0.1",
-            "javax.el:javax.el-api:3.0.1-b04"
-
-    implementation "org.springframework:spring-web:$springVersion",
-            "org.springframework:spring-webmvc:$springVersion",
-            "org.springframework.data:spring-data-jpa:$springDataJpaVersion",
-            "org.springframework:spring-orm:$springVersion",
-            "org.springframework:spring-context-support:$springVersion",
-
-            "org.springframework.security:spring-security-web:$springSecurityVersion",
-            "org.springframework.security:spring-security-config:$springSecurityVersion",
-
-            "org.hibernate:hibernate-entitymanager:$hibernateVersion",
-            "org.hibernate:hibernate-validator:5.2.0.Beta1",
-
-            "com.zaxxer:HikariCP-java6:2.3.7",
-            "mysql:mysql-connector-java:$mysqlConnectorVersion",
-
-            "org.slf4j:slf4j-api:$slf4jVersion",
-            "ch.qos.logback:logback-classic:$logbackVersion",
-            "ch.qos.logback:logback-core:$logbackVersion",
-
-            "org.thymeleaf:thymeleaf-spring4:2.1.4.RELEASE",
-            "org.thymeleaf.extras:thymeleaf-extras-springsecurity4:2.1.2.RELEASE",
-
-			"com.fasterxml.jackson.core:jackson-databind:2.6.3",
-
-			"net.sf.dozer:dozer-spring:5.5.1",
-			"net.sf.dozer:dozer:5.5.1",
-			
-            "net.sf.ehcache:ehcache:2.10.0",
-
-            "com.h2database:h2:1.4.187"
-
-    testImplementation "junit:junit:$junitVersion",
-            "org.springframework:spring-test:$springVersion",
-            "org.mockito:mockito-all:1.9.5"
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'
+    implementation "net.sf.dozer:dozer-spring:5.5.1"
+    implementation "net.sf.dozer:dozer:5.5.1"
+    implementation 'org.springframework.boot:spring-boot-starter-cache:2.6.2'
+    compileOnly 'org.projectlombok:lombok'
+    runtimeOnly 'mysql:mysql-connector-java'
+    annotationProcessor 'org.projectlombok:lombok'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.springframework.security:spring-security-test'
+    testImplementation 'org.mockito:mockito-core:2.21.0'
 }
 
-tomcat {
-    httpPort = 9999
-    httpsPort = 9091
-    enableSSL = true
-    contextPath = 'timesheet'
-
-    users {
-        user {
-            username = 'user'
-            password = '123456'
-            roles = ['developers']
-        }
-
-        user {
-            username = 'admin'
-            password = 'admin123'
-            roles = ['admin']
-        }
-    }
+test {
+    useJUnitPlatform()
 }
