--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,7 @@
-db.url=jdbc:mysql://localhost:3306/timesheet
-db.username=root
-db.password=root
-
-hikari.dataSourceClassName=com.mysql.jdbc.jdbc2.optional.MysqlDataSource
-hikari.maximumPoolSize=10
-hikari.idleTimeout=30000
-
-hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
-hibernate.hbm2ddl.auto=update
-hibernate.show_sql=true
+#spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/timesheet
+spring.datasource.username=root
+spring.datasource.password=root
+#spring.jpa.show-sql: true
+spring.cache.jcache.config=ehcache.xml
+spring.jpa.hibernate.use-new-id-generator-mappings=false
