--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ apply plugin: 'idea'
 apply plugin: 'eclipse'
 
 
-group = 'com.example'
+group = 'com.std.timesheet'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '1.8'
 
